# tau-script

./: Cargo.toml
analyzer/: Cargo.toml
analyzer/src/: lib.rs
analyzer/src/lexer/: lexer.rs  mod.rs  token_peeker.rs
analyzer/src/parser/: mod.rs  stmt.rs
analyzer/src/source/: cursor.rs  file_source.rs  mod.rs  repl_source.rs  str_source.rs
analyzer/src/token/: boxes.rs  mod.rs
analyzer/tests/: test_lexer.rs  test_parser.rs
example/: test.tas
executor/: Cargo.toml
executor/src/: error.rs  lib.rs  main.rs  vm.rs
executor/src/exec/: mod.rs  stmt.rs
frontend/: Cargo.toml
frontend/frontend-library/: Cargo.toml
frontend/frontend-library/src/: error.rs  lib.rs  position.rs
frontend/lexer/: Cargo.toml
frontend/lexer/src/: char_stream.rs  lexer.rs  lib.rs  token_peeker.rs
frontend/lexer/tests/: test_lexer.rs
frontend/parser/: Cargo.toml
frontend/parser/src/: lib.rs  stmt.rs
frontend/parser/tests/: test_parser.rs
frontend/src/: lib.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  main.rs  object_box.rs  value.rs
interpreter/src/expr_eval/: mod.rs
interpreter/src/object/: closure.rs  env.rs  mod.rs  number.rs  object_fn.rs  string.rs  (+3 more)
lexer/: Cargo.toml
lexer/src/: char_stream.rs  lib.rs
object/: Cargo.toml
object/object-core/: Cargo.toml
object/object-ext/: Cargo.toml
object/object-types/: Cargo.toml
object/src/: lib.rs  main.rs
object_/: Cargo.toml
object_/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  main.rs  stmt.rs
src/: args.rs  main.rs  run.rs
tests/: hello.asm  hello.plang  print_token.rs
(+168 files in other folders)
