[package]
name = "tau-script"
version = "0.1.0"
edition = "2024"

[dependencies]
executor = { path = "executor" }


[workspace]
members = [
    "analyzer",

    "object",
    "object/object-core",
    "object/object-core/object-trait-derive",
    "object/object-ext",
    "object/object-types",

    "executor",
]
