[package]
name = "tau-script"
version = "0.1.0"
edition = "2024"

[dependencies]
executor = { path = "executor" }
analyzer = { path = "analyzer" }
object = { path = "object" }
clap = { version = "4.5.47", features = ["derive"] }


[workspace]
members = [
    "analyzer",

    "object",
    "object/object-core",
    "object/object-core/object-trait-derive",
    "object/object-ext",
    "object/object-types",

    "executor",
]
